# a2m

./: .gitignore  README.md  pyproject.toml
a2m/: __main__.py  config.py  emit.py  initialize.py  rss.py
a2m/inputs/: __init__.py
a2m/outputs/: __init__.py  mail.py
a2m/processes/: buildin.py  translation.py
conf/: config.yml.example
conf/systemd/: a2m.service  a2m.timer
