[tool.poetry]
name = "a2m"
version = "0.1.0"
description = ""
authors = ["Kazuya Mitsutani"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.11"
luigi = "^3.5.0"
bs4 = "^0.0.2"
lxml = "^5.2.1"
google-api-python-client = "^2.125.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
google-auth = "^2.29.0"
google-cloud-translate = "^3.15.3"
google-cloud-api-keys = "^0.5.9"
jsonc-parser = "^1.1.5"
google-api = "^0.1.12"
pyyaml = "^6.0.1"
click = "^8.1.7"
numpy = "^1.26.4"
loguru = "^0.7.2"
deepl = "^1.17.0"
googletrans = "^3.0.0"
google-cloud = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
